--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,4 +23,8 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
+
+//Material design dimens library
+// https://github.com/DmitryMalkovich/material-design-dimens
+    compile 'com.dmitrymalkovich.android:material-design-dimens:1.2'
 }
