--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,9 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
+    //compile 'com.android.support:support-v4:23.4.0'
     compile 'com.android.support:design:23.4.0'
+    compile 'com.android.support:cardview-v7:23.4.0'
 
     compile 'com.squareup.picasso:picasso:2.5.2'
 
@@ -39,8 +41,10 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.3.1'
 
-//circle image library
-    compile 'com.pkmmte.view:circularimageview:1.1'
+//vk
+    compile 'com.vk:androidsdk:1.6.5'
+
+
 
 ///
 
