Существенный рефакторинг, доработка, отладка (без задания 7). Наиболее инттересное из нового: - custom view полей редактирования пользовательских данных - крутой phone textwatcher - не надо повторно логиниться (пока не нажал) logout - новый behavior для возможности свертывания плашки

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,11 @@
 /build
 
 #build files
-/app/build
+/app/build/generated
+/app/build/intermediates
+/app/build/tmp
+/app/build/outputs/logs
+
 
 
 # Local configuration file (sdk path, etc)
