--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+
     compile 'com.android.support:appcompat-v7:23.4.0'
     //compile 'com.android.support:support-v4:23.4.0'
     compile 'com.android.support:design:23.4.0'
@@ -43,13 +44,12 @@ dependencies {
 
 //vk
     compile 'com.vk:androidsdk:1.6.5'
-
-
+    compile 'com.googlecode.libphonenumber:libphonenumber:7.2.2'
 
 ///
 
 
 //Material design dimens library
 // https://github.com/DmitryMalkovich/material-design-dimens
-    compile 'com.dmitrymalkovich.android:material-design-dimens:1.2'
+   // compile 'com.dmitrymalkovich.android:material-design-dimens:1.2'
 }
