--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,4 @@
+apply plugin: 'org.greenrobot.greendao'
 apply plugin: 'com.android.application'
 apply plugin: 'android-apt'
 
@@ -18,6 +19,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+}
+
+greendao {
+    schemaVersion 1
+    targetGenDir 'src/main/java'
 }
 
 dependencies {
@@ -52,4 +58,12 @@ dependencies {
 //Material design dimens library
 // https://github.com/DmitryMalkovich/material-design-dimens
    // compile 'com.dmitrymalkovich.android:material-design-dimens:1.2'
+
+    compile 'com.facebook.stetho:stetho-okhttp3:1.3.1'
+    compile 'com.facebook.stetho:stetho:1.3.1'
+    compile 'org.greenrobot:greendao:3.0.1'
+    compile 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.0.2'
+
+    compile 'com.redmadrobot:chronos:1.0.7'
+    compile 'org.greenrobot:eventbus:3.0.0'
 }
