--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
-    <!--for retrofit-->
+    <!-- for retrofit -->
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
@@ -17,14 +17,19 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <activity android:name=".ui.activities.MainActivity"/>
+        <activity android:name=".ui.activities.HostProfileActivity"/>
         <activity
             android:name=".ui.activities.UserListActivity"
             android:parentActivityName=".ui.activities.UserListActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ui.activities.UserListActivity"/>
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
         </activity>
         <activity
             android:name=".ui.activities.ProfileUserActivity"
@@ -33,15 +38,13 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ui.activities.UserListActivity"/>
         </activity>
-
-
         <activity android:name=".ui.activities.LoginActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
         </activity>
+
+        <service
+            android:name=".services.DownloadDataService"
+            android:exported="false">
+        </service>
     </application>
 
 </manifest>
